# foda-fuzzy-ontology-diagnostics

./: .gitignore  DEVIATIONS.md  QUICKSTART.md  README.md  docker-compose.yml  foda_ml_architecture.drawio  pom.xml
evaluation/: README.md  __init__.py  pyproject.toml
evaluation/analysis/: __init__.py  correlation_matrix.py  headline_table.py  load_phase2_results.py  scatter_plots.py
evaluation/benchmarks/: __init__.py  base.py  boutique_loader.py  foda12_loader.py  rcaeval_loader.py
evaluation/experiments/: __init__.py  analysis.py  evaluate_baro.py  evaluate_causalrca.py  evaluate_dejavu.py  evaluate_foda_fcp.py  evaluate_microrca.py  evaluate_monitorrank.py  evaluate_yrca.py  run_all.py  run_phase2_cc.py  run_phase2_ec.py  run_phase2_sc.py  run_phase2_sg.py
evaluation/extraction/: DESIGN_inject_time_removal.md  __init__.py  canonical_explanation.py  ontology_mapping.py  schema_normalizer.py
evaluation/methods/: __init__.py  _onset.py  _protocol.py  baro.py  base.py  causalrca.py  dejavu.py  foda_fcp.py  microrca.py  monitorrank.py  yrca.py
evaluation/metrics/: __init__.py  base.py  confidence_calibration.py  explanation_completeness.py  ontology_adapter.py  ranking_metrics.py  semantic_coherence.py  semantic_groundedness.py
evaluation/tests/: conftest.py  test_analysis.py  test_baro.py  test_boutique_loader.py  test_canonical.py  test_causalrca.py  test_confidence_calibration.py  test_dejavu.py  test_evaluate_baro.py  test_evaluate_causalrca.py  test_evaluate_dejavu.py  test_evaluate_foda_fcp.py  test_evaluate_microrca.py  test_evaluate_monitorrank.py  test_evaluate_yrca.py  test_explanation_completeness.py  test_foda12_loader.py  test_foda_fcp.py  test_load_phase2_results.py  test_microrca.py  test_monitorrank.py  test_ontology_adapter.py  test_protocol.py  test_ranking_metrics.py  test_rcaeval_loader.py  (+8 more)
(+180 files in other folders)
