[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foda-evaluation"
version = "0.1.0"
description = "Evaluation framework for the FODA fuzzy-ontology diagnostics paper"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "FODA Project" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "networkx>=3.0",
    "owlready2>=0.46",
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "benchmarks",
    "methods",
    "metrics",
    "extraction",
    "experiments",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
