[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foda-evaluation"
version = "0.1.0"
description = "Evaluation framework for the FODA fuzzy-ontology diagnostics paper"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "FODA Project" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "networkx>=3.0",
    "owlready2>=0.46",
    "pytest>=8.0",
]

[project.optional-dependencies]
# Baseline-specific dependencies. Install with:
#   pip install -e ".[baselines]"
# Without this extra, baseline tests/harnesses that need these packages
# fail at import time with a clear ModuleNotFoundError. The core
# inject_time-clean contract (schema_normalizer, _protocol, _onset)
# requires only the base dependencies above.
baselines = [
    "causal-learn>=0.1.3",       # CausalRCA: PC-algorithm CPDAG learning
    # other baseline-specific deps
]

[tool.hatch.build.targets.wheel]
packages = [
    "benchmarks",
    "methods",
    "metrics",
    "extraction",
    "experiments",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
